astonvilla-app/astonvilla-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: astonvilla-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: astonvilla-app
  template:
    metadata:
      labels:
        app: astonvilla-app
    spec:
      containers:
      - name: astonvilla-app
        image: oumaimakhelifi/astonvilla-app:1.1.25
        ports:
        - containerPort: 80
