astonvilla-app/pv.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-pod
spec:
  containers:
    - name: demo-container
      image: nginx
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: demo-storage
  volumes:
    - name: demo-storage
      persistentVolumeClaim:
        claimName: demo-pvc
